# GREENRAT-CONCORE

./: Dockerfile.jl  Dockerfile.py  Manifest.toml  Project.toml  README.md  concore.jl  concore.py  concoredocker.py  concorekill.bat  copy_with_port_portname.py  editgraph  makedocker  mkconcore.jl  mkconcore.py  old_concore.jl  old_concore.py  old_concoredocker.jl  pyproject.toml  requirements.txt  setup.py  src_combined.jl
0mq/: JLdistributed_server.graphml  JLfileOnlyCommunication.graphml  JLsemicyclic.graphml  JLtest0mq.graphml  JLtest0mq2.graphml  JLtest0mq3.graphml  JLtest0mq4.graphml  JLtest0mqbody2.graphml  JLtest0mqcall.graphml  JLtest4fun.graphml  comm_node.jl  concorekill.bat  easy_funbody_zmq.jl  easy_funbody_zmq.py  easy_funcall_zmq.jl  easy_funcall_zmq.py  firstNode.jl  funbody.jl  funbody.py  funbody2.jl  funbody_distributed.jl  funbody_zmq.jl  funbody_zmq2.jl  funcall.jl  funcall2.jl  funcall_distributed.jl  funcall_zmq.jl  funcall_zmq2.jl  secondNode.jl  thirdNode.jl
ConcorePython/: __init__.py  concore_file.py  concore_zmq.py
JLtest0mq4_new/: build.bat  debug.bat  params.bat  run.bat
docker_testing/: build  clear  debug  maxtime  run  stop  unlock
docker_testing3/: build  clear  debug  params  run
example/: g1.graphml  plotym.jl  pm.jl  shm_g1.graphml
fileOnlyCommunication/: debug.bat  unlock.bat
g1/: build.bat  clear.bat  debug.bat  maxtime.bat  params.bat  run.bat  stop.bat  unlock.bat
g3/: build.bat  unlock.bat
measurements/: A.jl  A.py  B.jl  B.py  C.jl  C.py  JL_ZeroMQOnly.graphml  JL_fileOnlyCommunication.graphml  concorekill.bat  (+7 more)
(+206 files in other folders)
